Added canvas tag

--- a/game.html
+++ b/game.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 </head>
-<body>
+<body style="margin: 0">
 <noscript><p>This game requires Javascript.</p></noscript>
+<canvas></canvas>
 </body>
 </html>
